Refine transient clear